TODO fix spacing

--- a/style.css
+++ b/style.css
@@ -79,6 +79,10 @@ html {
     font-size: 1em;
   }
 
+  p {
+    font-family: 'Scada', sans-serif;
+  }
+
   #quotetext {
     font-size: 2.80em;
     margin-bottom: 0.5em;
